# real-estate-tools

./: .flake8  .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: lint.yml  run_tests.yml
real_estate_tools/: arv_estimate.py  comps_collect.py  consts.py  flip_calculator.py  flip_calculator_components.py  geoutils.py  scraper.py  sidebar.md  test_html.html  utils.py
resources/: raw_results_formated.json
tests/: conftest.py  test_consts_SellPurchaseFactors.py  test_consts_ZP_Data.py  test_geoutils_compute_distance_in_df.py  test_geoutils_forward_search.py  test_utils_area_to_sqft.py  test_utils_clean_zpid.py  test_utils_fetch_properties.py  test_utils_properties_to_df.py  test_utils_raw_zillow_to_property_details.py  test_utils_sumarize_flip_calc.py
tests/data/: complete_result.json  test_consts_ZP_Data.py
tests/integrations/: test_geoutils_forward_search_locationiq.py
tests/test_files/: empty_result.json  raw_results.json
