[tool.poetry]
name = "real-estate-tools"
version = "0.1.0"
description = ""
authors = ["Dror Atariah <drorata@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "real_estate_tools"}]

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7"
pandas = "^2.1.3"
streamlit = "^1.28.2"
requests = "^2.31.0"
loguru = "^0.7.2"
pydantic = "^2.5.1"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-datafiles = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    "real_estate_tools/arv_estimate.py",
    "real_estate_tools/flip_calculator.py",
    "real_estate_tools/flip_calculator_components.py",
    ]
